<resources>
    <string name="app_name">Moon</string>
    <string name="title">Fazy księżyca</string>
    <string name="today">Dzisiaj: </string>
    <string name="last_new_moon">Poprzedni nów: </string>
    <string name="next_full_moon">Następna pełnia: </string>
    <string name="full_moons_in_year">Pełnie w roku</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_2020">2020</string>
    <string name="settings">Ustawienia</string>
    <string name="hemisphere_used">Używana półkula</string>
    <string name="hemisphere_north">Północna</string>
    <string name="hemisphere_south">Południowa</string>
    <string name="algorithm_used">Używany algorytm</string>
    <string name="simple">Simple</string>
    <string name="conway">Conway</string>
    <string name="trig1">Trig1</string>
    <string name="trig2">Trig2</string>
    <string name="save">Zapisz</string>
    <string name="settings_saved">Zapisano ustawienia.</string>
</resources>
